# kindergarten-puzzle

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  index.html  mado.toml  mdsf.json  puzzles.json  shapes.json  taplo.toml  wrangler.toml
.github/workflows/: pages.yml
blueprint/: Cargo.toml
blueprint-core/: Cargo.toml
blueprint-core/src/: lib.rs
blueprint/src/: main.rs
dev/: index.html  puzzles.json  wasm-bridge.js
dev/assets/: index-ADM4iA2A.js  index-B68rC8Rj.js  index-B83_G7Ja.js  index-BetA_zl3.js  index-BlDIYt-s.js  index-BmZDbqSW.js  index-C8L6XaiW.js  index-CIZk840a.js  index-COiGR3lT.js  index-CjC920qD.js  index-Dk0bgyjt.js  index-Dk_OLLD5.js  index-SPmt7bkD.js
dev/pkg/: puzzle_wasm.d.ts  puzzle_wasm.js  puzzle_wasm_bg.wasm.d.ts
dev/puzzle/: k10.json  k11.json  k12.json  k6.json  k7.json
feat/doc/: index.html
feat/doc/assets/: index-C2Xouk_T.js
feat/doc/pkg/: puzzle_wasm.d.ts
feat/fix_bugs/: index.html
feat/fix_bugs/assets/: index-B8JSYzOF.js  index-CB4XeBLJ.js  index-C_SocfNN.js  index-Nsp6DZ6L.js
feat/fix_bugs/pkg/: puzzle_wasm.d.ts
feat/index/: index.html  puzzles.json
feat/index/assets/: index-BAfpwdHc.js  index-BUtULEE0.js  index-CkAgmsVW.js
feat/index/pkg/: package.json  puzzle_wasm.js  puzzle_wasm_bg.wasm.d.ts
feat/index/puzzle/: k11.json
feat/new_puzzle_k10/: index.html
feat/new_puzzle_k10/assets/: index-DWKxw2da.js
feat/new_puzzle_k10/pkg/: puzzle_wasm_bg.wasm.d.ts
feat/new_puzzle_k7/: index.html  puzzles.json
feat/new_puzzle_k7/assets/: index-DK8RVf_w.js
feat/new_puzzle_k7/pkg/: puzzle_wasm.js
feat/new_puzzle_k7/puzzle/: k12.json
feat/new_puzzle_k_double/: index.html
feat/new_puzzle_k_double/assets/: index-CFdNm8Y9.js
feat/new_puzzle_k_double/pkg/: puzzle_wasm.d.ts  puzzle_wasm.js
feat/new_puzzle_k_double/puzzle/: k-double.json  k7.json  k_double.json
feat/round/: index.html
feat/round/assets/: index-CbnkWVav.js
feat/round/pkg/: puzzle_wasm.js
feat/round/puzzle/: k-double.json  k7.json
fonts/: Cargo.toml  build.rs
fonts/src/: lib.rs
main/: index.html
main/assets/: index-BfaZzfUJ.js  index-BvpqJ9ag.js  index-CDg0n8eZ.js  index-CEc4uUaq.js  index-CqS27xRS.js
main/pkg/: puzzle_wasm.js
main/puzzle/: k7.json
puzzle/: k-double.json  k10.json  k11.json  k12.json  k7.json  k_double.json
puzzle-core/: Cargo.toml
puzzle-core/src/: lib.rs
puzzle-wasm/: Cargo.toml
puzzle-wasm/src/: canvas.rs  constants.rs  lib.rs  models.rs  state.rs  upload.rs  utils.rs
web/: .npmrc  .prettierignore  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: puzzles.json  shapes.json  wasm-bridge.js
web/public/puzzle/: k11.json
web/scripts/: dev-prepare.mjs
web/src/: global.d.ts  i18n.ts  main.tsx  setup.ts
web/src/components/: App.tsx  Home.tsx  TutorModal.tsx
web/src/theme/: ThemeToggle.tsx  catppuccin.ts
web/src/ui/: App.tsx  Home.tsx  Tutorial.tsx  catppuccin.ts  i18n.ts  theme.tsx
web/src/utils/: localFile.ts
