[package]
name = "blueprint"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
svg2pdf = "0.11"
pdf-writer = "0.12"
fonts = { path = "../fonts" }
blueprint-core = { path = "../blueprint-core" }
png = "0.17"
