[package]
name = "puzzle-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
puzzle-core = { path = "../puzzle-core" }
blueprint-core = { path = "../blueprint-core" }
fonts = { path = "../fonts" }
png = "0.17"
usvg = "0.44"
resvg = "0.44"
tiny-skia = "0.11"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Location",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "WheelEvent",
  "Event",
  "EventTarget",
  "console",
  "HtmlInputElement",
  "File",
  "FileList",
  "FileReader",
  "Blob",
  "Url",
  "DomStringMap",
  "Request",
  "Response",
]
