[package]
name = "puzzle-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
puzzle-core = { path = "../puzzle-core" }
blueprint-core = { path = "../blueprint-core" }
fonts = { path = "../fonts" }
usvg = "0.45"
resvg = "0.45"
tiny-skia = "0.11"
rapier2d = { version = "0.29", default-features = true }
parry2d = "0.24"
earcutr = "0.5"
polyline = "0.11"
geo-types = "0.7"
geo = "0.31"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Storage",
  "Location",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "DomRect",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "Event",
  "EventTarget",
  "console",
  "HtmlInputElement",
  "HtmlSelectElement",
  "File",
  "FileList",
  "FileReader",
  "Blob",
  "Url",
  "DomStringMap",
  "Request",
  "Response",
]
